--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,23 @@
 		 	<groupId>com.h2database</groupId>
 		 	<artifactId>h2</artifactId>
 		 </dependency>
+		 
+		 <dependency>
+		   <groupId>org.springframework.boot</groupId>
+		   <artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
+				
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		</dependency>
 		
+		<dependency>
+		    <groupId>org.projectlombok</groupId>
+		    <artifactId>lombok</artifactId>
+		    <version>1.18.20</version>
+		    <scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
