--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,34 @@
-spring.profiles.active=${:test}
+#spring.profiles.active=${:test}
 
-spring.profiles: logging-debug
-logging:
-  file: logs/application.log
-  level:
-    org.springframework.web: DEBUG
-    com.krkgj: DEBUG
+#spring.profiles: logging-debug
+#logging:
+#  file: logs/application.log
+#  level:
+#    org.springframework.web: DEBUG
+#    com.krkgj: DEBUG
 
 spring.devtools.livereload.enabled=true
+
+server.port = 9944
+
+#logging.level.root=DEBUG
+
+#spring.mvc.view.prefix=/WEB-INF/views/
+#spring.mvc.view.suffix=.jsp
+
+# DataBase Setting
+spring.datasource.type=org.apache.tomcat.jdbc.pool.DataSource
+spring.datasource.url=jdbc:mysql://localhost:3306/krkgj_blog?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=true
+spring.jpa.database=mysql
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
