--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,11 +17,11 @@ server.port = 9944
 #spring.mvc.view.suffix=.jsp
 
 # DataBase Setting
-spring.datasource.type=org.apache.tomcat.jdbc.pool.DataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/krkgj_blog?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+#spring.datasource.type=org.apache.tomcat.jdbc.pool.DataSource
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/krkgj_blog?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
