--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,11 @@
 #spring.profiles.active=${:test}
 
-#spring.profiles: logging-debug
-#logging:
-#  file: logs/application.log
-#  level:
-#    org.springframework.web: DEBUG
-#    com.krkgj: DEBUG
-
 spring.devtools.livereload.enabled=true
 
-server.port = 9944
+server.port=9944
 
-#logging.level.root=DEBUG
-
-#spring.mvc.view.prefix=/WEB-INF/views/
-#spring.mvc.view.suffix=.jsp
+logging.level.root=info
+logging.level.com.krkgj.blogapi=debug
 
 # DataBase Setting
 #spring.datasource.type=org.apache.tomcat.jdbc.pool.DataSource
