--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,8 @@ spring.datasource.username=root
 spring.datasource.password=root
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
+#spring.jackson.date-format=com.fasterxml.jackson.databind.util.StdDateFormat
+
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
